second commit for feature1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>Home page for feature</h1>
+    <h1>Home page for feature</h1>
+    <h1>Home page for feature</h1>
+    <h1>Home page for feature</h1>
+    <h1>Home page for feature</h1>
+   
 </body>
 </html>
