--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1>Home page for feature</h1>
+    <h1>Home page for feature1</h1>
     <h1>Home page for feature</h1>
     <h1>Home page for feature</h1>
     <h1>Home page for feature</h1>
