--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     
     <h1>Home page for feature1</h1>
-    <h1>Home page for feature</h1>
-    <h1>Home page for feature</h1>
-    <h1>Home page for feature</h1>
-    <h1>Home page for feature</h1>
+    <h1>Home page for feature2</h1>
+    <h1>Home page for feature3</h1>
+    <h1>Home page for feature4</h1>
+    <h1>Home page for feature5</h1>
    
 </body>
 </html>
