--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <h1>Home page for feature4</h1>
 
 
-    <h1>Home page for feature</h1>
-    <h1>Home page for feature</h1>
-    <h1>Home page for feature</h1>
-    <h1>Home page for feature</h1>
+    <h1>Home page for feature5</h1>
+    <h1>Home page for feature6</h1>
+    <h1>Home page for feature7</h1>
+    <h1>Home page for feature8</h1>
    
 </body>
 </html>
